[package]
name = "auswertung"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/cyclic.rs"
name = "cyclic_receiver"

[[bin]]
path = "src/ping.rs"
name = "ping"

[[bin]]
path = "src/uds_ping.rs"
name = "uds_ping"

[dependencies]
libc = "0.2"
plotly = "0.8"
linux-rt = { git="https://github.com/marcfir/linux-rt.git", version="0.4.0" }
